--- a/cityTutorial/Town.html
+++ b/cityTutorial/Town.html
@@ -177,7 +177,7 @@
                 return car;
             };
 
-            var CarAnimation = function(){
+            var WheelAnimation = function(){
                 const animWheel = new BABYLON.Animation("wheelAnimation", "rotation.y", 30, BABYLON.Animation.ANIMATIONTYPE_FLOAT, BABYLON.Animation.ANIMATIONLOOPMODE_CYCLE);
 
                 const wheelKeys = []; 
@@ -217,13 +217,89 @@
 
             };
 
+            var CarAnimation = function() {
+                const animCar = new BABYLON.Animation("carAnimation", "position.x", 30, BABYLON.Animation.ANIMATIONTYPE_FLOAT, BABYLON.Animation.ANIMATIONLOOPMODE_CYCLE);
+                const carKeys = []; 
+                const car = scene.getMeshByName("car");
+
+                carKeys.push({
+                    frame: 0,
+                    value: -4
+                });
+
+                carKeys.push({
+                    frame: 150,
+                    value: 4
+                });
+
+                carKeys.push({
+                    frame: 210,
+                    value: 4
+                });
+                
+                animCar.setKeys(carKeys);
+
+                car.animations = [];
+                car.animations.push(animCar);
+
+                scene.beginAnimation(car, 0, 210, true);
+            };
+
+            const slide = function (turn, dist) { //after covering dist apply turn
+                this.turn = turn;
+                this.dist = dist;
+            }
+
+            var CreateSphere = function () {
+                const sphere = BABYLON.MeshBuilder.CreateSphere("sphere", {diameter: 0.25});
+
+                //end points for the line sequence in an array
+                //y component can be non zero
+                const points = [];
+                points.push(new BABYLON.Vector3(4, 1, 4));
+                points.push(new BABYLON.Vector3(4, 1, -4));
+                points.push(new BABYLON.Vector3(-4, 1, -2));
+                points.push(points[0]); //close the triangle;
+
+                var triangle = BABYLON.MeshBuilder.CreateLines("triangle", {points: points})
+
+                const track = [];
+                var distance = 0;
+                var p = 0;
+                track.push(new slide(Math.PI / 2, 4));  //first side length 4
+                track.push(new slide(3 * Math.PI / 4, 8)); //at finish of second side distance covered is 4 + 4
+                track.push(new slide(3 * Math.PI / 4, 8 + 4 * Math.sqrt(2))); //all three sides cover the distance 4 + 4 + 4 * sqrt(2)
+
+                if (distance > track[p].dist) {        
+                    sphere.rotate(BABYLON.Axis.Y, track[p].turn, BABYLON.Space.LOCAL);
+                    p +=1;
+                    p %= track.length;
+                }
+                if (p === 0) {
+                    distance = 0;
+                    sphere.position = new BABYLON.Vector3(2, 0, 2); //reset to initial conditions
+                    sphere.rotation = BABYLON.Vector3.Zero();//prevents error accumulation 
+                }
+
+                triangle.position = new BABYLON.Vector3(-6, 0, 0);
+                triangle.rotate(BABYLON.Axis.Y, BABYLON.Tools.ToRadians(-95), BABYLON.Space.LOCAL);
+                const startRotation = triangle.rotationQuaternion.clone(); //use clone so that variables are independent not linked copies
+                if (p === 0) {
+                    distance = 0;
+                    triangle.position = new BABYLON.Vector3(-6, 0, 0);
+                    triangle.rotationQuaternion = startRotation.clone();
+                }
+            };
+
             var createScene = function () {
                     CreateNewSceneWithCamera();
                     CreateGround();
                     house = CreateHouse();
                     CreateMultipleHouses(house);
                     CreateCar();
+                    WheelAnimation();
                     CarAnimation();
+                    CreateSphere();
 
                     return scene;
                 };
