Splitted into different files: GameArea and Player

--- a/SnakeBab/Main.html
+++ b/SnakeBab/Main.html
@@ -38,6 +38,8 @@
     <script src="https://cdn.babylonjs.com/loaders/babylonjs.loaders.min.js"></script>
     <script src="https://code.jquery.com/pep/0.4.1/pep.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/earcut@2.2.2/dist/earcut.dev.min.js"></script>
+    <script src="./GameArea.js"></script>
+    <script src="./Player.js"></script>
    </head>
    <body>
 
@@ -60,17 +62,7 @@
             var engine = new BABYLON.Engine(canvas, true); // Generate the BABYLON 3D engine
             var scene = new BABYLON.Scene(engine);
 
-            var GameArea = class {
-                CreateGameArea() {
-                    for(var row = -12; row < 12; row++){
-                        for(var column = -8; column < 8; column++){
-                        const box = BABYLON.MeshBuilder.CreateBox("Box" + row +"x" + column, {size:1}, scene);
-                        box.position = new BABYLON.Vector3(row *1.2, column*1.2, 0);
-                        }
-                    }
-                }
-            };
-            
+
             var CreateSkyBox = function() {
                 const skybox = BABYLON.MeshBuilder.CreateBox("skyBox", {size:150}, scene);
                 const skyboxMaterial = new BABYLON.StandardMaterial("skyBox", scene);
@@ -89,12 +81,13 @@
             };
 
             var createScene = function () {
-                let obj = new GameArea();
+                let gameArea = new GameArea();
+                let player = new Player();
 
 
                     CreateSkyBox();
                     CreateNewSceneWithCamera();
-                    obj.CreateGameArea();
+                    gameArea.CreateGameArea();
                     return scene;
                 };
 
